--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,12 +24,12 @@ jobs:
         uses: android-actions/setup-android@v3
 
       - name: Build APK
-        run: ./gradlew assembleUnstableDebug
-
+        run: ./gradlew assembleRelease
+      
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: keyboard-apk
-          path: build/outputs/apk/unstable/debug/*.apk
+          path: build/outputs/apk/release/*.apk
           
 
