Fix compose imports and animation dependency

--- a/build.gradle
+++ b/build.gradle
@@ -287,6 +287,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.animation:animation'
+    implementation 'androidx.compose.animation:animation-core'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation 'com.google.android.material:material:1.12.0'
