filed serialization issue with model selection json

--- a/voiceinput-shared/build.gradle
+++ b/voiceinput-shared/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library' version '8.2.2'
     id 'org.jetbrains.kotlin.android' version '2.0.0'
     id 'org.jetbrains.kotlin.plugin.compose' version '2.0.0'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '2.0.0'
 }
 
 final def translationsWithoutEngValues = { final String path ->
