Disable ML model binding

--- a/voiceinput-shared/build.gradle
+++ b/voiceinput-shared/build.gradle
@@ -73,7 +73,7 @@ android {
     buildFeatures {
         compose true
         viewBinding true
-        mlModelBinding true
+        mlModelBinding false
     }
 }
 
