--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 //file:noinspection HardCodedStringLiteral
 plugins {
-    id 'com.android.application' version '8.2.2'
-    id 'org.jetbrains.kotlin.android' version '2.0.0'
-    id 'org.jetbrains.kotlin.plugin.compose' version '2.0.0'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '2.0.0'
-    id 'com.android.library' version '8.2.2' apply false
+    id 'com.android.application' version '8.10.1'
+    id 'org.jetbrains.kotlin.android' version '2.1.0'
+    id 'org.jetbrains.kotlin.plugin.compose' version '2.1.0'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '2.1.0'
+    id 'com.android.library' version '8.10.1' apply false
 }
 
 def getVersionCode = { ->
@@ -281,6 +281,7 @@ android {
         noCompress 'dict'
     }
 
+    ndkVersion '28.2.13676358'
     externalNativeBuild {
         ndkBuild {
             path 'native/jni/Android.mk'
