Switch to CMake and remove some old unused files

--- a/build.gradle
+++ b/build.gradle
@@ -283,8 +283,8 @@ android {
 
     ndkVersion '28.2.13676358'
     externalNativeBuild {
-        ndkBuild {
-            path 'native/jni/Android.mk'
+        cmake {
+            path 'native/jni/CMakeLists.txt'
         }
     }
 
