Disable WorkManager entirely
Some crashes still occurred because job was still scheduled but network state can no longer be accessed, as WorkManager isn't used now it's easiest to just remove it

--- a/build.gradle
+++ b/build.gradle
@@ -375,9 +375,9 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json-jvm:1.7.1'
 
-    def work_version = "2.9.0"
-    implementation "androidx.work:work-runtime-ktx:$work_version"
-    implementation "androidx.work:work-runtime:$work_version"
+    //def work_version = "2.9.0"
+    //implementation "androidx.work:work-runtime-ktx:$work_version"
+    //implementation "androidx.work:work-runtime:$work_version"
 
     implementation project(":voiceinput-shared")
 
