feat: Add Quick Settings tile to temporarily hide keyboard
Closes #1787

Adds a Quick Settings tile (API 24+) that allows users to temporarily
suppress the keyboard from appearing. When enabled, the keyboard will
not pop up when text fields are focused.

Changes:
- Add HideKeyboardTileService for Quick Settings toggle
- Add KEYBOARD_SUPPRESSED preference to Settings.kt
- Modify LatinIME to check suppress flag in onShowInputRequested()
  and onEvaluateInputViewShown()
- Add ic_keyboard_hide drawable and string resources
- Register TileService in AndroidManifest.xml

--- a/java/AndroidManifest.xml
+++ b/java/AndroidManifest.xml
@@ -63,6 +63,18 @@
         </service>
         -->
 
+        <!-- Quick Settings Tile for hiding keyboard (API 24+) -->
+        <service
+            android:name=".qs.HideKeyboardTileService"
+            android:icon="@drawable/ic_keyboard_hide"
+            android:label="@string/qs_tile_hide_keyboard_label"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
         <!-- Activities -->
         <activity android:name=".uix.settings.SettingsActivity"
              android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
