Initial Chinese implementation using RIME
Co-authored-by: Aleksandras Kostarevas <alex@futo.org>

--- a/build.gradle
+++ b/build.gradle
@@ -343,6 +343,12 @@ android {
         noCompress 'dict'
     }
 
+    packagingOptions {
+        jniLibs {
+            useLegacyPackaging true
+        }
+    }
+
     ndkVersion '28.2.13676358'
     externalNativeBuild {
         cmake {
@@ -408,6 +414,10 @@ dependencies {
     implementation 'com.google.guava:guava:33.4.8-android'
     implementation(name:'mozc-release', ext:'aar')
     // End for MOZC
+
+    // For RIME
+    implementation files('libs/rime-release.aar')
+    // End for RIME
 
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
