Add dictation command processor for voice input
Adds a post-processing step to the voice input pipeline that converts
spoken command phrases (e.g. "new line", "dollar sign", "caps on") into
their corresponding characters and formatting. Covers 69 commands across
10 categories, each independently toggleable in a new Dictation Commands
settings sub-page under Voice Input. Includes 108 JVM unit tests.

--- a/build.gradle
+++ b/build.gradle
@@ -328,6 +328,10 @@ android {
             res.srcDirs = ['java/unstable/res', translationsWithoutEngValues('translations/devbuild')]
         }
 
+        test {
+            java.srcDirs = ['java/test']
+        }
+
         androidTest {
             res.srcDirs = ['tests/res']
             java.srcDirs = ['tests/src']
